--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ html * {
     margin: 0;
 }
 
+body {
+    background: rgb(255,172,67);
+    background: linear-gradient(0deg, rgba(255,172,67,1) 0%, rgba(138,190,153,1) 67%, rgba(0,212,255,1) 100%); 
+}
+
 canvas {
     display: block;
     z-index: 0;
